--- a/src/main/resources/general_template.vm
+++ b/src/main/resources/general_template.vm
@@ -1,4 +1,4 @@
-import ua.artcode.dynamic_compile.MethodInvoker;
+import ua.artcode.utils.dynamic_compile.MethodInvoker;
 
 public class ${className} implements MethodInvoker {
 
